[gd_scene load_steps=3 format=2]

[ext_resource path="res://Player/Skills/FollowCommand.gd" type="Script" id=1]

[sub_resource type="CircleShape2D" id=1]
radius = 99.3187

[node name="FollowCommand" type="Node2D"]
script = ExtResource( 1 )

[node name="CommandArea" type="Area2D" parent="."]
collision_layer = 2048
collision_mask = 128

[node name="CollisionShape2D" type="CollisionShape2D" parent="CommandArea"]
shape = SubResource( 1 )
[connection signal="area_entered" from="CommandArea" to="." method="_on_CommandArea_area_entered"]
[connection signal="area_exited" from="CommandArea" to="." method="_on_CommandArea_area_exited"]
[connection signal="body_shape_entered" from="CommandArea" to="." method="_on_CommandArea_body_shape_entered"]
[connection signal="body_shape_exited" from="CommandArea" to="." method="_on_CommandArea_body_shape_exited"]
